			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05i: *********************************

BUG: (3/12/07, GVG) DRC minArea and active arcs between transistors (Bug #1288)
FIX: Not to stop searching of the valid bucket after the first instance is found in QuickAreaEnumerator.visitNodeInst

BUG: (3/12/07, DN) Renaming libraries causes icons to become unexpanded (Bug #1289).
FIX: In Cell.update update "expandedNodes".

IMP/MAN: (3/7/07, SMR) Added new Display preference to control the MDI/SDI style (Bug #1277).

IMP: (3/7/07, SMR) Sea of gates router now handles vias properly.

IMP: (3/7/07, SMR) Improved "Estimate Delays" calculations.

IMP/MAN: (3/6/07, SMR) Sea of gates router has parameters in "Routing preferences".

BUG: (3/05/07, DN) "Easy shape" bit of ImmutableArcInst can become invalid after foundry change.
FIX: Remove check "gridFullWidth <= protoType.getMaxLayerGridOffset()" from definition of "Easy shape" bit,
     to "AbstractShapeBuilder.genShapeEasy" and "ImmutableArcInst.genBoundsEassy".

IMP: (2/28/07, GVG) Poly ports in CMOS90 transistors are zero size for the default sizes.
Requested by JonG.

BUG: (2/28/07, SMR) New cell attributes all appear at (0,0) (Bug #1282).
FIX: Created Cell.newVarOffset() and use it in Attributes.CreateAttribute.doIt()
     and also in ToolMenu.MakeTemplate.doIt().

************************* Version 8.05h: *********************************

IMP: (2/27/07, SMR) Sea-of-gates router runs faster.

IMP/MAN: (2/26/07, SMR) In the "Tool / Logical Effort" menu, renamed
     "Print Info for Selected Node" to "List Info for Selected Node" to be
     consistent (print means to the printer).

BUG: (2/26/07, SMR) Reloading a text cell marks the library "dirty" (bug #1280).
FIX: In TextWindow.java, when reloading, prevent change detection.

IMP/MAN: (2/23/07, GVG) FillGenerator for CMOS90 enabled. Only working